# SPGA-backend

./: .gitignore  README.md  pyproject.toml
app/: ai.py  config.py  db.py  handler.py  main.py  utils.py  yl69.py
app/crud/: utils.py
app/models/: __init__.py  device.py  notification_history.py  plant.py  platnt.py  registed.py  user.py  watering.py
data/: new_plantnet300K_species_id_2_name.json
scripts/: insert_plant.py  insert_sample_data.py  insert_watering.py  migrate_all.py
